@@ -63,12 +63,6 @@ A more detailed overview of how the installer is built:
   and so are build-depended on.
 * If you have some udebs that are not available on your mirror yet,
   you can drop them in 'localudebs/' and they will be used. 
-  HOWEVER, the current way they are used does not make apt aware of the
-  files in localudebs when it is installing other udebs. So if you have
-  added a package to localudebs to satisfy a dependency of some other udeb
-  that is not in localudebs, apt will still fail during the build. The way
-  around this for now is to copy any such udebs into localudebs, then apt
-  does not have to worry about installing them and everything will work.
 * dpkg is used to unpack the udebs into the build directory.
 * A customized set of reduced libraries is generated to correspond to the
   udebs that were installed.
