@@ -14,9 +14,5 @@
 * Convert the driver floppies to use FAT filesystem, not ext2, on i386.
   Makes it easier for third parties to throw additional udebs on.
 * Cache the upxed kernel, to avoid re-upxing it over and over.
-* The localudebs stuff is a hack, and would be batter handled by using
-  apt-ftparchive to set up an apt repository based on files in localudebs,
-  and let apt know about it by adding that to sources.list.udeb. Then the
-  ugly caveat in README could be removed.
 * Use udeb depenedency resolution more. One place it would be useful is to
   avoid the long list in pkg-lists/monolithic/common.
