@@ -21,6 +21,9 @@ debian-installer (trunk) UNRELEASED; urgency=low
       kernel floppies are reported to not boot without it. This change may
       also affect the 2.6 kernel floppies, which need to be tested.
       Closes: #301374
+    - The localudebs directory is managed as an apt repository now, complete
+      with Packages file. Build-depend on apt-utils for this.
+    - Remove localudebs caveat from README, above change should fix it.
   * Kurt Roeckx
     - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
       package list.
